--- a/src/index.html
+++ b/src/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <div id="root">
-        <h1>ToDo List</h1>
+        <script src="./index.js"></script>
     </div>
 </body>
 </html>
